--- a/css/main.css
+++ b/css/main.css
@@ -1611,6 +1611,10 @@ body {
   font-size: 1.875rem;
 }
 
+.advantages__item .image {
+  margin-right: 0.625rem;
+}
+
 .advantages__item p {
   font-size: 0.75rem;
 }
@@ -1814,7 +1818,7 @@ body {
   margin-right: 0;
 }
 
-.filter_wrap > ul > li > a {
+.filter_wrap > ul > li > .link {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1832,23 +1836,23 @@ body {
   border-radius: 6.25rem;
 }
 
-.filter_wrap > ul > li > a:hover {
+.filter_wrap > ul > li > .link:hover {
   background-color: var(--c-red);
   color: white;
   border-color: var(--c-red);
 }
 
-.filter_wrap > ul > li > a:hover i::before {
+.filter_wrap > ul > li > .link:hover i::before {
   color: white;
 }
 
-.filter_wrap > ul > li > a i {
+.filter_wrap > ul > li > .link i {
   pointer-events: none;
   margin-left: 0.4375rem;
   font-size: 0.375rem;
 }
 
-.filter_wrap > ul > li > a i::before {
+.filter_wrap > ul > li > .link i::before {
   color: var(--c-black-50);
 }
 
@@ -1885,12 +1889,12 @@ body {
   max-width: 10rem;
 }
 
-.filter_wrap > ul > li .filter_dropmenu li:first-child, .filter_wrap > ul > li .filter_dropmenu li:nth-child(2) {
-  margin-top: 0;
-}
-
 .filter_wrap > ul > li .filter_dropmenu li:nth-child(2) {
   margin-top: 1.1875rem;
+}
+
+.filter_wrap > ul > li .filter_dropmenu li:first-child, .filter_wrap > ul > li .filter_dropmenu li:nth-child(2) {
+  margin-top: 0 !important;
 }
 
 .filter_wrap > ul > li .filter_dropmenu li a {
@@ -2133,7 +2137,7 @@ body {
   opacity: 1;
 }
 
-.tab_wrap__nav ul li a {
+.tab_wrap__nav ul li a, .tab_wrap__nav ul li button {
   pointer-events: none;
   position: relative;
   font-weight: 500;
@@ -2143,7 +2147,7 @@ body {
   white-space: nowrap;
 }
 
-.tab_wrap__nav ul li a::after {
+.tab_wrap__nav ul li a::after, .tab_wrap__nav ul li button::after {
   content: "";
   position: absolute;
   z-index: 2;
@@ -2160,21 +2164,37 @@ body {
 }
 
 @media (max-width: 767px) {
-  .tab_wrap__nav ul li a::after {
+  .tab_wrap__nav ul li a::after, .tab_wrap__nav ul li button::after {
     bottom: 0;
   }
 }
 
-.tab_wrap__nav ul li.active a {
+.tab_wrap__nav ul li.active a, .tab_wrap__nav ul li.active button {
   color: black;
 }
 
-.tab_wrap__nav ul li.active a::after {
+.tab_wrap__nav ul li.active a::after, .tab_wrap__nav ul li.active button::after {
   opacity: 1;
 }
 
 .tab_wrap__tabs .tab_content {
   display: none;
+}
+
+.tab_wrap__tabs .tab_content .item_product {
+  margin-bottom: 2rem;
+}
+
+@media (max-width: 1050px) {
+  .tab_wrap__tabs .tab_content .item_product {
+    margin-bottom: 1.25rem;
+  }
+}
+
+@media (max-width: 540px) {
+  .tab_wrap__tabs .tab_content .item_product {
+    margin-bottom: 0;
+  }
 }
 
 .tab_wrap__tabs .tab_content.active {
